--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
         
   <script type="text/javascript" src="./js/index.js"></script>
   <script src=”https://cdn.zingchart.com/zingchart.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script><!--library for creating charts and graphs-confirmed with Randy that we can use it-->
-<script src="https://cdn.jsdelivr.net/npm/echarts@5.0.2/dist/echarts.min.js"></script><!--library for creating the candlestick chart, as charts.js requires a plugin-->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script><
+<script src="https://cdn.jsdelivr.net/npm/echarts@5.0.2/dist/echarts.min.js"></script>
   <script async
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAp2b_XrHqfJyPZes-fcY5RAEmIkpcSV6E&callback=initMap">
 </script>
