--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </section>
         </div>       
 
-            <div class= "box last">
+            <div class= "box g">
                 <div id="calculateinfo">
                     <table id="stockDataCalc">
                         <tr>
