--- a/index.html
+++ b/index.html
@@ -171,12 +171,11 @@
             <section id="hchart">
                 <table id="finicalData">
                 <tr >
-                    <th>Date</th>
-                    <th>Open</th>
-                    <th>Close</th>
-                    <th>Low</th>
-                    <th>High</th>
-                    <th>Volume</th>
+                    <th>Year</th>
+                    <th>Revenue</th>
+                    <th>Earnings</th>
+                    <th>Assets</th>
+                    <th>Liabilities</th>
                 </tr>
                 </table>
             </section>
@@ -187,8 +186,7 @@
         
         </div>   
         <script type="text/javascript" src="./js/index.js"></script>
-        <script src=”https://cdn.zingchart.com/zingchart.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script><
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/echarts@5.0.2/dist/echarts.min.js"></script>
         <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAp2b_XrHqfJyPZes-fcY5RAEmIkpcSV6E&callback=initMap"></script>
         </main>
