--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         </tr>          
                         <tr><td>Average: </td>
                             <td id="averageOpen"></td>                                  
-                            <td id="averageclose"></td>  
+                            <td id="averageClose"></td>  
                             <td id="averagelow"></td>  
                             <td id="averageHigh"></td>  
                             <td id="averageVolume"></td>                                                                                              
