--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <span id="infoAddress"></span> 
                             
                 <label>Website:</label>
-                <span id="infowebsite"></span>    
+                <span><a href="" id="infowebsite"></a></span>   
                 
                <label>Exchange:</label>
                 <span id="infoexchange"></span> 
